--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "highlight.js": "^11.11.1",
+    "lodash-es": "^4.17.21",
+    "marked": "^15.0.8",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
   },
